; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_tle62x0.c_tle62x0_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_tle62x0.c_tle62x0_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tle62x0_state = type { i8*, i32, i32, i32 }
%struct.spi_transfer = type { i8*, i32, i32 }
%struct.spi_message = type { i32 }

@CMD_READ = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tle62x0_state*)* @tle62x0_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tle62x0_read(%struct.tle62x0_state* %0) #0 {
  %2 = alloca %struct.tle62x0_state*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.spi_transfer, align 8
  %5 = alloca %struct.spi_message, align 4
  store %struct.tle62x0_state* %0, %struct.tle62x0_state** %2, align 8
  %6 = load %struct.tle62x0_state*, %struct.tle62x0_state** %2, align 8
  %7 = getelementptr inbounds %struct.tle62x0_state, %struct.tle62x0_state* %6, i32 0, i32 0
  %8 = load i8*, i8** %7, align 8
  store i8* %8, i8** %3, align 8
  %9 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %4, i32 0, i32 0
  %10 = load i8*, i8** %3, align 8
  store i8* %10, i8** %9, align 8
  %11 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %4, i32 0, i32 1
  %12 = load %struct.tle62x0_state*, %struct.tle62x0_state** %2, align 8
  %13 = getelementptr inbounds %struct.tle62x0_state, %struct.tle62x0_state* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = mul nsw i32 %14, 2
  %16 = sdiv i32 %15, 8
  store i32 %16, i32* %11, align 8
  %17 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %4, i32 0, i32 2
  %18 = load %struct.tle62x0_state*, %struct.tle62x0_state** %2, align 8
  %19 = getelementptr inbounds %struct.tle62x0_state, %struct.tle62x0_state* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 8
  store i32 %20, i32* %17, align 4
  %21 = load i8, i8* @CMD_READ, align 1
  %22 = load i8*, i8** %3, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 0
  store i8 %21, i8* %23, align 1
  %24 = load i8*, i8** %3, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 1
  store i8 0, i8* %25, align 1
  %26 = load i8*, i8** %3, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 2
  store i8 0, i8* %27, align 1
  %28 = load i8*, i8** %3, align 8
  %29 = getelementptr inbounds i8, i8* %28, i64 3
  store i8 0, i8* %29, align 1
  %30 = call i32 @spi_message_init(%struct.spi_message* %5)
  %31 = call i32 @spi_message_add_tail(%struct.spi_transfer* %4, %struct.spi_message* %5)
  %32 = load %struct.tle62x0_state*, %struct.tle62x0_state** %2, align 8
  %33 = getelementptr inbounds %struct.tle62x0_state, %struct.tle62x0_state* %32, i32 0, i32 2
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @spi_sync(i32 %34, %struct.spi_message* %5)
  ret i32 %35
}

declare dso_local i32 @spi_message_init(%struct.spi_message*) #1

declare dso_local i32 @spi_message_add_tail(%struct.spi_transfer*, %struct.spi_message*) #1

declare dso_local i32 @spi_sync(i32, %struct.spi_message*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
